@startuml GRB_Diagrama_Clases

title Diagrama de Clases - Modulo GRB

left to right direction

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam nodesep 70
skinparam ranksep 80

skinparam class {
    BackgroundColor #E8F1FF
    BorderColor #2F5EA8
    ArrowColor #2F5EA8
    FontColor #1F3F73
}

skinparam interface {
    BackgroundColor #F4F8FF
    BorderColor #2F5EA8
    FontColor #1F3F73
}

skinparam enum {
    BackgroundColor #EEF5FF
    BorderColor #1F3F73
    FontColor #1F3F73
}

package "Entidades del Dominio - Modulo GRB" {

    package "Cuentas y Perfiles" #FFF7E6 {

        enum EstadoCuenta {
            ACTIVA
            DESACTIVADA
        }

        class Usuario {
            - idUsuario: UUID
            - nombre: String
            - apellido: String
            - correo: String
        }

        class Cuenta {
            - idCuenta: UUID
            - contrasena: String
            - estado: EstadoCuenta
            - fechaCreacion: Date
            - fechaModificacion: Date
            + activar(): void
            + desactivar(): void
        }

        class Perfil {
            - idPerfil: UUID
            - telefono: String
            - direccion: String
            - fotoPerfil: String
            - fechaActualizacion: Date
        }

        Usuario "1" *-- "1" Cuenta : posee
        Usuario "1" -- "1" Perfil : tiene
        Cuenta ..> EstadoCuenta : <<use>>

        EstadoCuenta -[hidden]down- Usuario
        Usuario -[hidden]down- Cuenta
        Cuenta -[hidden]down- Perfil
    }

    package "Roles y Permisos" #EEF9F1 {

        enum NombreRol {
            ADMINISTRADOR
            RESIDENTE
            PROPIETARIO
            PERSONAL_SEGURIDAD
            PRESIDENTE
        }

        class Rol {
            - idRol: UUID
            - nombre: NombreRol
            - descripcion: String
            + obtenerPermisos(): List<Permiso>
        }

        class Permiso {
            - idPermiso: UUID
            - nombre: String
            - recurso: String
        }

        Rol "1" *-- "1..*" Permiso : define
        Rol ..> NombreRol : <<use>>

        NombreRol -[hidden]down- Rol
        Rol -[hidden]down- Permiso
    }

    package "Recuperacion de Contrasena" #F5EEFF {

        class TokenRestablecimiento {
            - idToken: UUID
            - codigo: String
            - fechaExpiracion: Date
            - intentos: Integer
            + esValido(): boolean
            + estaExpirado(): boolean
        }
    }

    Cuenta "*" -- "*" Rol : asignado a
    Cuenta "1" -- "0..*" TokenRestablecimiento : genera
}

package "Patrones de Diseno - Modulo GRB" #FFF0F0 {

    class SesionUsuario <<Singleton>> <<core>> {
        - {static} instancia: SesionUsuario
        - usuarioActual: Usuario
        + {static} obtenerInstancia(): SesionUsuario
        + cerrarSesion(): void
    }

    SesionUsuario ..> Usuario : <<use>>
}

package "Fachada GRB - API para otros modulos" #F0F7FF {

    interface IGestionUsuariosAPI <<Facade>> {
        + autenticar(correo: String, contrasena: String): boolean
        + obtenerUsuarioPorId(idUsuario: UUID): Usuario
        + validarPermiso(idCuenta: UUID, recurso: String): boolean
        + listarUsuariosPorRol(rol: NombreRol): List<Usuario>
        + iniciarRecuperacionContrasena(correo: String): void
    }

    IGestionUsuariosAPI ..> Usuario : <<use>>
    IGestionUsuariosAPI ..> Cuenta : <<use>>
    IGestionUsuariosAPI ..> Rol : <<use>>
}

@enduml
